--- a/src/www/locales/en/common.json
+++ b/src/www/locales/en/common.json
@@ -5,9 +5,10 @@
 "username":"Username",
 "password":"Password",
 "submit":"Submit",
+"cancel":"Cancel",
 "create":"Create",
 "refresh":"Refresh",
-"startDate":"startDate",
+"startDate":"StartDate",
 "endDate":"EndDate",
 "instance":"Instance",
 "status":{
@@ -17,5 +18,27 @@
 "stop":"Stop"},
 "image":"Image",
 "account":"Account",
-"project":"Project"
+"project":"Project",
+"createStep":{
+"step1":"Select Date Range",
+"step2":"Setting Machine & Image",
+"step3":"Input Project Number",
+"step4":"Comfirm Page",
+"back":"Back",
+"next":"Next",
+"finish":"Finish"},
+"backReview":"Back Review",
+"InstanceNum":"Number of Instance",
+"machineImage":"'s Image",
+"interval":"Interval",
+"days":"days",
+"dateRange":"Date Range",
+"youCreate":"You create",
+"editDate":"Edit Date",
+"remove":{
+"remove":"Remove",
+"comfirmRemove":"Comfirm Remove",
+"warning":"Are you sure remove this ?"
+},
+"signOut":"SignOut"
 }
