--- a/src/www/locales/tw/common.json
+++ b/src/www/locales/tw/common.json
@@ -5,6 +5,7 @@
 "username":"帳號(工號)",
 "password":"密碼",
 "submit":"確認",
+"cancel":"取消",
 "create":"創建",
 "refresh":"重新整理",
 "startDate":"起始日期",
@@ -17,5 +18,27 @@
 "stop":"停止"},
 "image":"Image",
 "account":"帳密",
-"project":"計畫代號"
+"project":"計畫代號",
+"createStep":{
+"step1":"選擇日期範圍",
+"step2":"設定Instance & Image",
+"step3":"輸入計畫代號",
+"step4":"確認頁面",
+"back":"上一步",
+"next":"下一步",
+"finish":"完成"},
+"backReview":"返回列表",
+"InstanceNum":"Instance數量",
+"machineImage":"使用的 Image",
+"interval":"區間",
+"days":"天",
+"dateRange":"日期範圍",
+"youCreate":"創建了",
+"editDate":"編輯結束日期",
+"remove":{
+"remove":"移除",
+"comfirmRemove":"確認移除",
+"warning":"您確定要移除?"
+},
+"signOut":"退出"
 }
