add some translation

--- a/src/www/locales/en/common.json
+++ b/src/www/locales/en/common.json
@@ -1,44 +1,56 @@
 {
-"logoSrc":"/image/itri_EL_A.png",
-"language":"Language",
-"appName":"DNN webportal",
-"username":"Username",
-"password":"Password",
-"submit":"Submit",
-"cancel":"Cancel",
-"create":"Create",
-"refresh":"Refresh",
-"startDate":"StartDate",
-"endDate":"EndDate",
-"instance":"Instance",
-"status":{
-"status":"Status",
-"initial":"Initial",
-"running":"Running",
-"stop":"Stop"},
-"image":"Image",
-"account":"Account",
-"project":"Project",
-"createStep":{
-"step1":"Select Date Range",
-"step2":"Setting Machine & Image",
-"step3":"Input Project Number",
-"step4":"Comfirm Page",
-"back":"Back",
-"next":"Next",
-"finish":"Finish"},
-"backReview":"Back Review",
-"InstanceNum":"Number of Instance",
-"machineImage":"'s Image",
-"interval":"Interval",
-"days":"days",
-"dateRange":"Date Range",
-"youCreate":"You create",
-"editDate":"Edit Date",
-"remove":{
-"remove":"Remove",
-"comfirmRemove":"Comfirm Remove",
-"warning":"Are you sure remove this ?"
-},
-"signOut":"SignOut"
+    "logoSrc": "/image/itri_EL_A.png",
+    "language": "Language",
+    "appName": "DNN webportal",
+    "username": "Username",
+    "password": "Password",
+    "submit": "Submit",
+    "cancel": "Cancel",
+    "create": "Create",
+    "refresh": "Refresh",
+    "startDate": "StartDate",
+    "endDate": "EndDate",
+    "instance": "Instance",
+    "status": {
+        "status": "Status",
+        "initial": "Initial",
+        "running": "Running",
+        "stop": "Stop"
+    },
+    "image": "Image",
+    "account": "Account",
+    "project": "Project",
+    "createStep": {
+        "step1": "Select Date Range",
+        "step2": "Setting Machine & Image",
+        "step3": "Input Project Number",
+        "step4": "Comfirm Page",
+        "back": "Back",
+        "next": "Next",
+        "finish": "Finish",
+        "id": "ID",
+        "password": "Password",
+        "dataSetPath": "DataSetPath",
+        "fieldRequired":"This field is required",
+        "withDataSet":"with DataSet",
+        "withoutDataSet":"without DataSet",
+        "option":"It's Option."
+    },
+    "backReview": "Back Review",
+    "InstanceNum": "Number of Instance",
+    "instanceImage": "'s Image",
+    "interval": "Interval",
+    "days": "days",
+    "dateRange": "Date Range",
+    "youCreate": "You create",
+    "editDate": "Edit Date",
+    "remove": {
+        "remove": "Remove",
+        "comfirmRemove": "Comfirm Remove",
+        "warning": "Are you sure remove this ?"
+    },
+    "signOut": "SignOut",
+    "detail":"Detail",
+    "excuteDay": "Excuted Day",
+    "leftDay": "Left Day"
 }
