--- a/src/www/locales/tw/common.json
+++ b/src/www/locales/tw/common.json
@@ -60,5 +60,6 @@
     "signOut": "退出",
     "detail":"詳細資料",
     "excuteDay": "已執行天數",
-    "leftDay": "剩餘天數"
+    "leftDay": "剩餘天數",
+    "openStorage":"開啟儲存空間"
 }
