--- a/src/www/locales/tw/common.json
+++ b/src/www/locales/tw/common.json
@@ -64,5 +64,7 @@
     "openStorage":"開啟儲存空間",
     "storage":"開啟FTP頁面上傳資料，或是使用其他的FTP client，例如 FileZilla",
     "noInstance":"無連續可用的Instance!",
-    "history":"瀏覽歷史紀錄"
+    "history":"瀏覽歷史紀錄",
+    "specailOrder":"特殊需求",
+    "mailto":"Mail給我們您的需求"
 }
