--- a/src/www/locales/en/common.json
+++ b/src/www/locales/en/common.json
@@ -18,6 +18,7 @@
         "stop": "Stop"
     },
     "image": "Image",
+    "imageDesc": "Image description",
     "account": "Account",
     "project": "Project Number",
     "createStep": {
@@ -42,7 +43,10 @@
     "calendar":{
         "fullyDay":"Fully Day",
         "instanceAvailable":"Instance Available",
-        "noData":"No data"
+        "noData":"No data",
+        "today":"Today is",
+        "executed":"Executed date",
+        "notyetExecute": "Not yet executed date"
     },
     "backReview": "Back Review",
     "InstanceNum": "Number of Instance",
@@ -59,7 +63,7 @@
     },
     "signOut": "SignOut",
     "detail":"Detail",
-    "excuteDay": "Excuted Day",
+    "excuteDay": "Executed Day",
     "leftDay": "Left Day",
     "openStorage":"Open Storage",
     "storage":"Open FTP webportal uploading dataset or you can using client FTP such as FileZilla",
@@ -70,5 +74,7 @@
     "maxHint":"Each user have 3 instance limit.",
     "editCalendarTile":"The instance can extend dates",
     "updatedSuccess":"Updated Success !",
-    "deletedSuccess":"Deleted Success !"
+    "deletedSuccess":"Deleted Success !",
+    "ip":"Internet Protocol Address",
+    "port":"Port"
 }
