add trnaslation create.confirm, create.create

--- a/src/www/locales/en/common.json
+++ b/src/www/locales/en/common.json
@@ -25,10 +25,12 @@
         "step1": "Select Date Range",
         "step2": "Setting Machine & Image",
         "step3": "Input Project Number",
-        "step4": "Comfirm Page",
+        "step4": "Confirm Page",
         "back": "Back",
         "next": "Next",
+        "confirm":"Confirm your setting !",
         "finish": "Finish",
+        "create": "Create Instance",
         "id": "ID",
         "password": "Password",
         "dataSetPath": "DataSetPath",
