--- a/src/www/locales/tw/common.json
+++ b/src/www/locales/tw/common.json
@@ -28,7 +28,9 @@
         "step4": "確認頁面",
         "back": "上一步",
         "next": "下一步",
+        "confirm":"請確認您的設定 !",
         "finish": "完成",
+        "create": "創建Instance",
         "id": "帳號",
         "password": "密碼",
         "dataSetPath": "資料集路徑",
