add translations menu , info, history, create, storage, charts, machine, signout

--- a/src/www/locales/en/common.json
+++ b/src/www/locales/en/common.json
@@ -89,5 +89,14 @@
     "reviewTitle": "Instance information",
     "department":"Department",
     "instanceEmpty":"Mybe try the cross button ?",
-    "searchSelect":"You can input project Name, Host, Number to search"
+    "searchSelect":"You can input project Name, Host, Number to search",
+    "menu":{
+        "info":"Information",
+        "history":"History",
+        "create":"Create Instance",
+        "storage":"Open Storage",
+        "charts":"Charts",
+        "machine":"Machines",
+        "signOut":"SignOut"
+    }
 }
