add translation waiting, loading, deleting, deleted, canceled, error

--- a/src/www/locales/en/common.json
+++ b/src/www/locales/en/common.json
@@ -17,7 +17,13 @@
         "status": "Status",
         "initial": "Initial",
         "running": "Running",
-        "stop": "Stop"
+        "stop": "Stop",
+        "waiting":"Waiting",
+        "loading":"Loading",
+        "deleting":"Deleting",
+        "deleted":"Deleted",
+        "canceled":"Canceled",
+        "error":"Error"
     },
     "image": "Image",
     "imageDesc": "Image description",
