--- a/src/www/locales/en/common.json
+++ b/src/www/locales/en/common.json
@@ -100,6 +100,7 @@
     "department":"Department",
     "instanceEmpty":"Mybe try the cross button ?",
     "searchSelect":"You can input project Name, Host, Number to search",
+    "gpuType":"GPU Type",
     "menu":{
         "info":"Information",
         "history":"History",
