--- a/src/www/locales/tw/common.json
+++ b/src/www/locales/tw/common.json
@@ -100,6 +100,7 @@
     "department":"單位",
     "instanceEmpty":"或許該試試十字的按鈕 ?",
     "searchSelect":"輸入 計畫主持人, 計畫名稱, 計畫代號 來搜尋",
+    "gpuType":"GPU 類型",
     "menu":{
         "info":"Instance資訊",
         "history":"歷史紀錄",
