--- a/src/www/locales/tw/common.json
+++ b/src/www/locales/tw/common.json
@@ -114,5 +114,6 @@
     "ftpInfo":"FTP 資訊",
     "ftpHost":"主機",
     "ftpPort":"連接埠",
-    "ftpProtocol":"通訊協定"
+    "ftpProtocol":"通訊協定",
+    "copySshCmd":"點擊複製ssh指令"
 }
