change some translation (by Vicky)

--- a/src/www/locales/tw/common.json
+++ b/src/www/locales/tw/common.json
@@ -7,7 +7,7 @@
     "password": "密碼",
     "submit": "確認",
     "cancel": "取消",
-    "create": "創建",
+    "create": "建立",
     "refresh": "重新整理",
     "startDate": "起始日期",
     "endDate": "結束日期",
@@ -42,15 +42,15 @@
         "next": "下一步",
         "confirm":"請確認您的schedule設定 !",
         "finish": "完成",
-        "create": "創建Schedule",
-        "success":"成功創建Schedule !",
+        "create": "建立Schedule",
+        "success":"成功建立Schedule !",
         "id": "帳號",
         "password": "密碼",
         "dataSetPath": "資料集路徑",
-        "fieldRequired":"此欄位必填",
+        "fieldRequired":"必填欄位",
         "withDataSet":"附加資料集",
         "withoutDataSet":"無附加資料集",
-        "option":"可選",
+        "option":"選項",
         "check":"驗證路徑",
         "avalableInstance":"可用的 Instance",
         "currentInstance":"已使用 Instance"
@@ -70,13 +70,13 @@
     "interval": "區間",
     "days": "天",
     "dateRange": "日期範圍",
-    "youCreate": "創建了",
+    "youCreate": "已建立",
     "editDate": "編輯結束日期",
     "clickEdit": "點此編輯日期",
     "remove": {
         "remove": "移除",
         "comfirmRemove": "確認移除",
-        "warning": "您確定要移除?"
+        "warning": "確定移除?"
     },
     "signOut": "退出",
     "detail":"詳細資料",
@@ -90,9 +90,9 @@
         "title":"歷史紀錄"
     },
     "specialOrder":"特殊需求",
-    "mailto":"Mail給我們您的需求",
-    "maxHint":"一個人最多三個instance，包含預定",
-    "editCalendarTitle":"此Instance可延長的日期",
+    "mailto":"寫信告訴我們您的需求",
+    "maxHint":"一名使用者最多建立三個instance，包含預定",
+    "editCalendarTitle":"Instance可延長日期",
     "updatedSuccess":"更新成功 !",
     "deletedSuccess":"移除成功 !",
     "ip":"網際協定位址",
@@ -100,7 +100,7 @@
     "afterRunning":"機器啟動後將會提供",
     "reviewTitle": "Instance 資訊",
     "department":"單位",
-    "instanceEmpty":"或許該試試十字的按鈕 ?",
+    "instanceEmpty":"請按右上角[+建立]按鈕?",
     "searchSelect":"輸入 計畫主持人, 計畫名稱, 計畫代號 來搜尋",
     "gpuType":"GPU 類型",
     "menu":{
