add gpuNumber translation

--- a/src/www/locales/en/common.json
+++ b/src/www/locales/en/common.json
@@ -109,6 +109,7 @@
     "instanceEmpty":"Click [+Create] on top right",
     "searchSelect":"You can input project Name, Host, Number to search",
     "gpuType":"GPU Type",
+    "gpuNumber":"GPU Number",
     "menu":{
         "info":"Information",
         "history":"History",
